plugins {
    id("maven-publish")
    id("dev.architectury.loom").version("latest.release")
}

group = "net.auoeke"
version = "3.0.0"

sourceCompatibility = 17
targetCompatibility = 17

sourceSets {
    main {
        java.srcDirs = ["src"]

        resources {
            srcDirs = ["resources"]
            include("assets/", "META-INF/", "pack.mcmeta", "*.json")
        }
    }
}

repositories {
    maven {url = "https://maven.auoeke.net"}
}

loom {
    forge {
        mixinConfig("soulbound-armory.mixins.json")
    }

    runConfigs {
        client {
            environment("client")
        }
    }
}

dependencies {
    minecraft("com.mojang:minecraft:1.16.5")
    mappings("net.fabricmc:yarn:1.16.5+build.10:v2")
    forge("net.minecraftforge:forge:1.16.5-36.2.19")

    implementation("net.auoeke:reflect:latest.integration")
	implementation("net.auoeke:romeral:latest.integration")
}

java {
    withSourcesJar()
}

processResources {

}

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }

    repositories {
        maven {
            url = "https://maven.auoeke.net"

            credentials {
                username = System.properties["maven.username"]
                password = System.properties["maven.password"]
            }
        }
    }
}
